# Agent_RED

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 00_overview.md  01_orchestrator_agent.md  02_navigation_agent.md  03_battle_agent.md  04_menu_agent.md  05_tool_schemas.md  06_knowledge_base.md  pokemon_red_agent_prompts.md  pokemon_red_agent_technical_design.md
docs/implementation/: README.md  phase1_knowledge_base.md  phase2_agent_framework.md  phase3_agents.md  phase4_pathfinding.md  phase5_integration.md  plan.md  tasks.md
roms/: .gitkeep
scripts/: extract_all.py  extract_collision.py  extract_items.py  extract_maps.py  extract_moves.py  extract_pokemon.py  extract_shops.py  extract_trainers.py  extract_types.py  extract_wild.py  validate_data.py
src/: __init__.py  config.py  dashboard.py  logging_config.py  main.py  recovery.py
src/agent/: __init__.py  base.py  battle.py  menu.py  navigation.py  objective.py  orchestrator.py  registry.py  simple_agent.py  state.py  types.py
src/api/: __init__.py  broadcaster.py  fallback.html  main.py  models.py
src/emulator/: __init__.py  interface.py  state_converter.py  state_reader.py
src/engine/: __init__.py  game_engine.py
src/knowledge/: __init__.py  base.py  hm_requirements.py  items.py  maps.py  moves.py  pokemon.py  shops.py  story_progression.py  trainers.py  type_chart.py  wild_encounters.py
src/pathfinding/: __init__.py  astar.py  cross_map.py  graph.py  tiles.py  trainer_vision.py
src/tools/: __init__.py  (+1 more)
tests/: __init__.py
ui/: package-lock.json  package.json
(+36 files in other folders)
