[tool.poetry]
name = "pokemon-red-agent"
version = "0.1.0"
description = "AI agent that plays Pokemon Red using Claude"
authors = ["AI Architecture Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Emulator
pyboy = "^2.0.0"

# AI
anthropic = "^0.40.0"

# Data validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Utilities
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
pillow = "^10.2.0"
numpy = "^1.26.0"

# Web Dashboard
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
pokemon-agent = "src.main:main"
pokemon-dashboard = "src.dashboard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
